manifest/ingress/d/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: name: myapp
            port: 
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mypod
            port: 
              number:
